--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -93,8 +93,8 @@ $svg-big-size: 30px;
 }
 
 %small-font-style {
-  font-size: $smallest-font-size;
-  line-height: $smallest-line-height;
+  font-size: $small-font-size;
+  line-height: $small-line-height;
 }
 
 %button {
