--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -60,6 +60,11 @@
     button {
       border: 1px solid white;
       color: white;
+      &:hover {
+        transition: all 0.3s ease-out;
+        background-color: white;
+        color: $mediumpurple;
+      }
     }
   }
 }
@@ -153,6 +158,11 @@
     background-color: transparent;
     font-size: $smallest-font-size;
     border-radius: 4px;
+    &:hover {
+      transition: all 0.3s ease-out;
+      background-color: #dc7338;
+      color: white;
+    }
   }
 }
 .account-setting-dropdown {
