--- a/src/assets/scss/_houseDetails.scss
+++ b/src/assets/scss/_houseDetails.scss
@@ -235,7 +235,7 @@
     cursor: pointer;
   }
 }
-.house-amenities-section{
+.house-amenities-section {
   padding-top: 70px;
   padding-bottom: 70px;
 }
@@ -260,5 +260,59 @@
     text-align: center;
     padding-left: 10px;
     line-height: 24px;
+  }
+}
+
+// Contact agent section
+.contact-landlord-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.contact-agent-card {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+.landlord-image-container {
+  height: 180px;
+  width: 180px;
+
+  img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+}
+.card-content {
+  padding: 10px 10px 30px 10px;
+}
+
+.landlord-short-details {
+  text-align: center;
+  padding-bottom: 20px;
+
+  h3 {
+    @extend %medium-font-style;
+    font-weight: $font-weight;
+    margin: 0;
+  }
+  span {
+    @extend %smallest-font-style;
+  }
+}
+.contact-landlord-button {
+  width: 100%;
+  border: 1px solid $deep-purple;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: transparent;
+  color: $deep-purple;
+  cursor: pointer;
+  &:hover{
+    transition: all  0.3s ease-out;
+    background-color: $deep-purple;
+    color: white;
   }
 }
