--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -9955,12 +9955,12 @@ h3 {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -10073,12 +10073,12 @@ ul {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -10145,12 +10145,12 @@ ul {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -10615,12 +10615,12 @@ html {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -10742,12 +10742,12 @@ html {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -10814,12 +10814,12 @@ html {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -11203,12 +11203,12 @@ html {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -11588,12 +11588,12 @@ html {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -12170,12 +12170,12 @@ html {
   font-weight: 700;
 }
 
-.property-description-text .full-description, .property-description-text span, .property-utility .value {
+.landlord-short-details h3, .property-description-text .full-description, .property-description-text span, .property-utility .value {
   font-size: 20px;
   line-height: 28px;
 }
 
-.amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
+.landlord-short-details span, .amenities-icon-wrapper span, .show-more-properties span, .property-monthly-price .monthly-price-header {
   font-size: 14px;
   line-height: 20px;
 }
@@ -12428,6 +12428,56 @@ html {
   line-height: 24px;
 }
 
+.contact-landlord-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.contact-agent-card {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+.landlord-image-container {
+  height: 180px;
+  width: 180px;
+}
+.landlord-image-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.card-content {
+  padding: 10px 10px 30px 10px;
+}
+
+.landlord-short-details {
+  text-align: center;
+  padding-bottom: 20px;
+}
+.landlord-short-details h3 {
+  font-weight: 700;
+  margin: 0;
+}
+.contact-landlord-button {
+  width: 100%;
+  border: 1px solid #7c54c1;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: transparent;
+  color: #7c54c1;
+  cursor: pointer;
+}
+.contact-landlord-button:hover {
+  transition: all 0.3s ease-out;
+  background-color: #7c54c1;
+  color: white;
+}
+
 .header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
   display: flex;
   align-items: center;
@@ -12455,12 +12505,12 @@ html {
   font-weight: 700;
 }
 
-.property-utility .value, .property-description-text span, .property-description-text .full-description {
+.property-utility .value, .property-description-text span, .property-description-text .full-description, .landlord-short-details h3 {
   font-size: 20px;
   line-height: 28px;
 }
 
-.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span {
+.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span, .landlord-short-details span {
   font-size: 14px;
   line-height: 20px;
 }
@@ -12539,12 +12589,12 @@ html {
   font-weight: 700;
 }
 
-.property-utility .value, .property-description-text span, .property-description-text .full-description {
+.property-utility .value, .property-description-text span, .property-description-text .full-description, .landlord-short-details h3 {
   font-size: 20px;
   line-height: 28px;
 }
 
-.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span {
+.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span, .landlord-short-details span {
   font-size: 14px;
   line-height: 20px;
 }
@@ -12611,12 +12661,12 @@ html {
   font-weight: 700;
 }
 
-.property-utility .value, .property-description-text span, .property-description-text .full-description {
+.property-utility .value, .property-description-text span, .property-description-text .full-description, .landlord-short-details h3 {
   font-size: 20px;
   line-height: 28px;
 }
 
-.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span {
+.property-monthly-price .monthly-price-header, .show-more-properties span, .amenities-icon-wrapper span, .landlord-short-details span {
   font-size: 14px;
   line-height: 20px;
 }
